<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="800dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/username_text"
                    style="@style/SmallTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profile_image"
                    app:layout_constraintTop_toTopOf="@+id/profile_image"
                    tools:text="eduardmer" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/followers_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/followers_text"
                    app:srcCompat="@drawable/ic_person" />

                <TextView
                    android:id="@+id/followers_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image"
                    tools:text="5" />

                <TextView
                    android:id="@+id/followers_button"
                    style="@style/SmallTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/followers"
                    app:layout_constraintBottom_toBottomOf="@+id/followers_text"
                    app:layout_constraintStart_toEndOf="@+id/followers_text" />

                <TextView
                    android:id="@+id/following_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/followers_text"
                    app:layout_constraintStart_toEndOf="@+id/followers_button"
                    tools:text="4" />

                <TextView
                    android:id="@+id/following_button"
                    style="@style/SmallTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/following"
                    app:layout_constraintBottom_toBottomOf="@+id/following_text"
                    app:layout_constraintStart_toEndOf="@+id/following_text" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="409dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/following_text" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/repos_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_button_selector"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider">

                    <ImageView
                        android:id="@+id/image_view"
                        style="@style/ProfileIconStyle"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_repository" />

                    <TextView
                        android:id="@+id/text_view"
                        style="@style/SmallTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/repositories"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="@+id/image_view"
                        app:layout_constraintStart_toEndOf="@+id/image_view"
                        app:layout_constraintTop_toTopOf="@+id/image_view" />

                    <TextView
                        android:id="@+id/repositories_number_text"
                        style="@style/SmallTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintBottom_toBottomOf="@+id/text_view"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/text_view"
                        tools:text="16" />

                    <View
                        android:id="@+id/divider4"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/text_view" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/organizations_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_button_selector"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/repos_layout">

                    <ImageView
                        android:id="@+id/image_view2"
                        style="@style/ProfileIconStyle"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/orange"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_organization" />

                    <TextView
                        android:id="@+id/text_view2"
                        style="@style/SmallTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/organizations"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="@+id/image_view2"
                        app:layout_constraintStart_toEndOf="@+id/image_view2"
                        app:layout_constraintTop_toTopOf="@+id/image_view2" />

                    <TextView
                        android:id="@+id/organizations_number_text"
                        style="@style/SmallTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintBottom_toBottomOf="@+id/text_view2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/text_view2"
                        tools:text="16" />

                    <View
                        android:id="@+id/divider5"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/text_view2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/starred_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_button_selector"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/organizations_layout">

                    <ImageView
                        android:id="@+id/image_view3"
                        style="@style/ProfileIconStyle"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/yellow"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/round_star_border_24" />

                    <TextView
                        android:id="@+id/text_view3"
                        style="@style/SmallTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/starred"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="@+id/image_view3"
                        app:layout_constraintStart_toEndOf="@+id/image_view3"
                        app:layout_constraintTop_toTopOf="@+id/image_view3" />

                    <TextView
                        android:id="@+id/starred_number_text"
                        style="@style/SmallTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintBottom_toBottomOf="@+id/text_view3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/text_view3"
                        tools:text="16" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/starred_layout" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/latest"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>